[gd_scene load_steps=6 format=2]

[ext_resource path="res://artiphonie/listen_choose/card_listen_choose.gd" type="Script" id=1]
[ext_resource path="res://assets/sound/success.ogg" type="AudioStream" id=3]
[ext_resource path="res://assets/sound/fail.ogg" type="AudioStream" id=4]
[ext_resource path="res://assets/theme/ButtonTheme.tres" type="Theme" id=6]
[ext_resource path="res://art/images/clown.jpg" type="Texture" id=8]

[node name="card_listen_choose" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
mouse_filter = 1
theme = ExtResource( 6 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="correct" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="incorrect" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="CardButton" type="Button" parent="."]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_0" type="Control" parent="CardButton"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.33484
margin_right = 1.33484
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="word" type="Label" parent="CardButton/layout_0"]
visible = false
anchor_top = 0.04
anchor_right = 1.0
anchor_bottom = 0.05
margin_top = -1.90735e-06
margin_bottom = 34.52
mouse_filter = 1
text = "Clown"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="CardButton/layout_0"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.9
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VideoPlayer" type="VideoPlayer" parent="CardButton/layout_0"]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="CardButton/layout_0"]
visible = false
anchor_left = 0.02
anchor_top = 0.55
anchor_right = 0.98
anchor_bottom = 0.97
margin_left = 1.90735e-06
grow_horizontal = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_1" type="Control" parent="CardButton"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.33484
margin_right = 1.33484
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="word" type="Label" parent="CardButton/layout_1"]
anchor_top = 0.04
anchor_right = 1.0
anchor_bottom = 0.05
margin_top = -9.53674e-07
margin_bottom = 21.56
mouse_filter = 1
text = "Clown"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="CardButton/layout_1"]
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.5
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="CardButton/layout_1"]
anchor_left = 0.02
anchor_top = 0.55
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_2" type="Control" parent="CardButton"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="word" type="Label" parent="CardButton/layout_2"]
anchor_top = 0.04
anchor_right = 1.0
anchor_bottom = 0.05
margin_top = -9.53674e-07
margin_bottom = 21.56
mouse_filter = 1
text = "Clown"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="CardButton/layout_2"]
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.913
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="CardButton/layout_2"]
visible = false
anchor_left = 0.02
anchor_top = 0.55
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
rect_min_size = Vector2( 1105, 272 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="layout_3" type="Control" parent="CardButton"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="word" type="Label" parent="CardButton/layout_3"]
anchor_top = 0.04
anchor_right = 1.0
anchor_bottom = 0.05
margin_top = -9.53674e-07
margin_bottom = 21.56
mouse_filter = 1
text = "Clown"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="picture" type="TextureRect" parent="CardButton/layout_3"]
visible = false
anchor_left = 0.05
anchor_top = 0.15
anchor_right = 0.95
anchor_bottom = 0.5
texture = ExtResource( 8 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="borel_maisonny_container" type="HBoxContainer" parent="CardButton/layout_3"]
anchor_left = 0.02
anchor_top = 0.191
anchor_right = 0.98
anchor_bottom = 0.97
grow_horizontal = 2
rect_min_size = Vector2( 1105, 272 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="finished" from="correct" to="." method="_on_correct_finished"]
[connection signal="finished" from="incorrect" to="." method="_on_incorrect_finished"]
[connection signal="pressed" from="CardButton" to="." method="_on_CardButton_pressed"]
